VERSION 1.0.13
==============

* FIXED: Interpret <!ENTITY e STARTTAG "x"> as <!ENTITY e "<x>"> (well,
  dependent on the delimiters).  (Richard O'Keefe).

* FIXED: Allow omitted end-tag for RCDATA and CDATA elements (only effective
  when hitting the end of the file).

* FIXED: Proper parsing of <!NOTATION ...> declaration.  Also fixed
  dtd_property(DTD, notations(Notations)) and modified
  dtd_property(DTD, notation(N, Decl)).

* ADDED: <!ENTITY #DEFAULT ...> (Richard O'Keefe).

* FIXED: Ignore newline after entity

* FIXED: Allow omitted ; expanding entities in CDATA attributes

* FIXED: Possible crash with SHORTREF endding in &#RE.

* FIXED: avoid crash on illegal syntax in DTD omited-tag declaration

VERSION 1.0.12
==============

* FIXED: More white-space issues in handling quoted attribute values.

* ADDED: XML NAMECHARS to the default set.  This seems to match HTML-4
  better and will only in exceptional cases harm normal SGML processing.

* ADDED/MODIFIED: Attributes not in the source, but with a default or
  fixed value declared in the DTD are now included in the output.  The
  old behaviour can be used using the defaults(false) option to
  load_structure/3.

* FIXED: expand parameter-entities in <!USEMAP declaration.

* FIXED: sgml utility to canonise space in output of `list' attributes.

* FIXED: proper entity-expansion and blank-canonisation in attribute-vaues
  (Richard O'Keefe).

* FIXED: false warning at start of NUTOKEN attribute (Richard O'Keefe).

VERSION 1.0.11
==============

* ADDED: handling of #CONREF attribute default (Richard O'Keefe).

* FIXED: sgml utility not to print "C" at the end when there where errors
  (Richard O'Keefe)

* FIXED: handle value-shorthand for nmtoken (Richard O'Keefe)

* FIXED: &RE; SHORTREF handling if the newline appears as the first
  character of a (new) #PCDATA block.

* CONFIG: Added -with-prolog=<Prolog> by Milan Zamazal for integration
  as Debian (linux) package.


VERSION 1.0.10
==============
