@@ -1,3 +1,10 @@
+* ADDED: Ignore SGML declaration in <!SGML ...>
+
+* FIXED: Do not require ; after character-entity
+
+* ADDED: Expand character and parameter entities while parsing literals
+  in a DTD (Richard O'Keefe).
+
 VERSION 1.0.13
 ==============
 
